feat: add basic env config & README

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,39 @@ spring:
   application:
     name:
       trade-mediator-api
+  
+  config:
+    import: optional:file:.env[.properties]
+
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+
+  jpa:
+    generate-ddl: true
+    show-sql: ${SHOW_SQL:false}
+    hibernate:
+      ddl-auto: create
+      naming:
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+    properties:
+      hibernate:
+        format_sql: true
+
+  flyway:
+    enabled: true
+    url: ${DB_URL}
+    user: ${DB_USER}
+    password: ${DB_PASSWORD}
+    schemas:
+      - ${DB_SCHEMA}
+    table: schema_history
+
+logging:
+  level:
+    root: ${ROOT_LOG_LEVEL:INFO}
+
+
+server:
+  port: ${APP_PORT:8080}
