--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ APP_PORT=8080
 DB_URL=jdbc:postgresql://localhost:5432/<DATABASE_NAME>
 DB_USER=<DATABASE_USER>
 DB_PASSWORD=<DATABASE_PASSWORD>
-DB_SCHEMA=<DATABASE_SCHEMA>
 
+INSERT_MOCK_DATA=true
 
 #====================== Logging configuration ======================#
 ROOT_LOG_LEVEL=INFO
